--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,23 @@
   <script type="text/javascript">
     $(".button-collapse").sideNav();
   </script>
+  <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1491576994188291',
+      xfbml      : true,
+      version    : 'v2.8'
+    });
+    FB.AppEvents.logPageView();
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
 </body>
 </html>
